--- a/game.html
+++ b/game.html
@@ -21,36 +21,52 @@
         <span class = "big-num">100</span><br>
         <span class="glyphicon glyphicon-arrow-down"></span><br>
         <span class = "small-num">2</span>
+        <div class="btn-group" role="group">
+          <button class = "btn btn-default choose-pile" data-id = "going-down-1">Add to Pile</button>
+          <button class = "btn btn-default check-pile" data-id = "going-down-1">Check Cards</button>
+        </div>
       </div>
-      <div class = "col-md-3 card">
+      <div class = "col-md-3 pile card going-down-1">
         <span>Empty Pile</span>
       </div>
-      <div class = "col-md-3 card">
+      <div class = "col-md-3 pile card going-down-2">
         <span>Empty Pile</span>
       </div>
-      <div class = "col-md-3 card">
+      <div class = "col-md-3 card" data-id = "going-down">
         <span class = "big-num">100</span><br>
         <span class="glyphicon glyphicon-arrow-down"></span><br>
         <span class = "small-num">2</span>
+        <div class="btn-group" role="group">
+          <button class = "btn btn-default choose-pile" data-id = "going-down-2">Add to Pile</button>
+          <button class = "btn btn-default check-pile" data-id = "going-down-2">Check Cards</button>
+        </div>
       </div>
     </div>
     <!--Row 2-->
     <div class = "row">
-      <div class = "col-md-3 card">
+      <div class = "col-md-3 card" data-id =  "going-up">
         <span class = "small-num">99</span><br>
         <span class="glyphicon glyphicon-arrow-up"></span><br>
         <span class = "big-num">1</span>
+        <div class="btn-group" role="group">
+           <button class = "btn btn-default choose-pile" data-id = "going-up-1">Add to Pile</button>
+          <button class = "btn btn-default check-pile" data-id = "going-up-1">Check Cards</button>
+        </div>
       </div>
-      <div class = "col-md-3 card">
+      <div class = "col-md-3 pile card" data-id = "going-down-1">
         <span>Empty Pile</span>
       </div>
-      <div class = "col-md-3 card">
+      <div class = "col-md-3 pile card" data-id = "going-down-2">
         <span>Empty Pile</span>
       </div>
-      <div class = "col-md-3 card">
+      <div class = "col-md-3 card" data-id = "going-up">
         <span class = "small-num">99</span><br>
         <span class="glyphicon glyphicon-arrow-up"></span><br>
         <span class = "big-num">1</span>
+        <div class = "btn-group" role="group">
+          <button class = "btn btn-default choose-pile" data-id = "going-up-2">Add to Pile</button>
+          <button class = "btn btn-default check-pile" data-id = "going-up-2">Check Cards</button>
+        </div>
       </div>
     </div>
     <!--Row 3-->
@@ -60,7 +76,7 @@
       </div>
       <div class ="col-md-8" id ="player-hand">
       </div>
-      <div class="col-md-2 done-button">
+      <div class="col-md-2 done-button hide">
         <button>Done</button>
       </div>
     </div>
