cards can be added to piles

--- a/game.html
+++ b/game.html
@@ -53,10 +53,10 @@
           <button class = "btn btn-default check-pile" data-id = "going-up-1">Check Cards</button>
         </div>
       </div>
-      <div class = "col-md-3 pile card" data-id = "going-down-1">
+      <div class = "col-md-3 pile card going-up-1">
         <span>Empty Pile</span>
       </div>
-      <div class = "col-md-3 pile card" data-id = "going-down-2">
+      <div class = "col-md-3 pile card going-up-2">
         <span>Empty Pile</span>
       </div>
       <div class = "col-md-3 card" data-id = "going-up">
