--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
-<body>
+<body class="main">
   <div class = "container">
     <div class = "row header">
       <div class = "col-md-6">
@@ -48,7 +48,7 @@
       <div class = "row">
         <div class = "col-md-3 card">
           <span class = "big-num">100</span><br>
-          <span class="glyphicon glyphicon-arrow-down"></span><br>
+          <span class="glyphicon glyphicon-arrow-down arrow"></span><br>
           <span class = "small-num">2</span>
         </div>
         <div class = "col-md-3 pile card going-down-1-all">
@@ -59,7 +59,7 @@
         </div>
         <div class = "col-md-3 card" data-id = "going-down">
           <span class = "big-num">100</span><br>
-          <span class="glyphicon glyphicon-arrow-down"></span><br>
+          <span class="glyphicon glyphicon-arrow-down arrow"></span><br>
           <span class = "small-num">2</span>
         </div>
       </div>
@@ -67,7 +67,7 @@
       <div class = "row">
         <div class = "col-md-3 card" data-id =  "going-up">
           <span class = "small-num">99</span><br>
-          <span class="glyphicon glyphicon-arrow-up"></span><br>
+          <span class="glyphicon glyphicon-arrow-up arrow"></span><br>
           <span class = "big-num">1</span>
         </div>
         <div class = "col-md-3 pile card going-up-1-all">
@@ -87,11 +87,9 @@
     <div class = "row">
       <div class = "col-md-3 card">
         <span class = "big-num">100</span><br>
-        <span class="glyphicon glyphicon-arrow-down"></span><br>
+        <span class="glyphicon glyphicon-arrow-down arrow"></span><br>
         <span class = "small-num">2</span>
-        <div class="btn-group" role="group">
           <button class = "btn btn-default choose-pile" data-id = "going-down-1">Add to Pile</button>
-        </div>
       </div>
       <div class = "col-md-3 pile card going-down-1">
         <span></span>
@@ -101,22 +99,18 @@
       </div>
       <div class = "col-md-3 card" data-id = "going-down">
         <span class = "big-num">100</span><br>
-        <span class="glyphicon glyphicon-arrow-down"></span><br>
+        <span class="glyphicon glyphicon-arrow-down arrow"></span><br>
         <span class = "small-num">2</span>
-        <div class="btn-group" role="group">
           <button class = "btn btn-default choose-pile" data-id = "going-down-2">Add to Pile</button>
-        </div>
       </div>
     </div>
     <!--Row 2-->
     <div class = "row">
       <div class = "col-md-3 card" data-id =  "going-up">
         <span class = "small-num">99</span><br>
-        <span class="glyphicon glyphicon-arrow-up"></span><br>
+        <span class="glyphicon glyphicon-arrow-up arrow"></span><br>
         <span class = "big-num">1</span>
-        <div class="btn-group" role="group">
            <button class = "btn btn-default choose-pile" data-id = "going-up-1">Add to Pile</button>
-        </div>
       </div>
       <div class = "col-md-3 pile card going-up-1">
         <span></span>
@@ -126,11 +120,9 @@
       </div>
       <div class = "col-md-3 card" data-id = "going-up">
         <span class = "small-num">99</span><br>
-        <span class="glyphicon glyphicon-arrow-up"></span><br>
+        <span class="glyphicon glyphicon-arrow-up arrow"></span><br>
         <span class = "big-num">1</span>
-        <div class = "btn-group" role="group">
           <button class = "btn btn-default choose-pile" data-id = "going-up-2">Add to Pile</button>
-        </div>
       </div>
     </div>
   </div>
