adjusted end of game

--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
             Cards Left: 98
         </div>
         <div class="done-button hide">
-            <button>Draw cards</button>
+            <button id="draw-cards">Draw cards</button>
         </div>
       </div>
     </div>
@@ -78,7 +78,7 @@
         </div>
         <div class = "col-md-3 card" data-id = "going-up">
           <span class = "small-num">99</span><br>
-          <span class="glyphicon glyphicon-arrow-up"></span><br>
+          <span class="glyphicon glyphicon-arrow-up arrow"></span><br>
           <span class = "big-num">1</span>
         </div>
       </div>
