--- a/game.html
+++ b/game.html
@@ -34,10 +34,10 @@
       <h4>Goal</h4>
       <p>The goal of The Game is to play as many cards as possible onto the four piles.</p>
       <h4>Setup</h4>
-      <p>The deck has 98 cards, one for each number between 2 and 98. You start by drawing 7 cards into your hand. Each turn, you must play at least 2 cards from your hand before drawing back to 7. Select a card from your hand by clicking on it and then click "Add to Pile" to add your card to your chosen pile. After you have played 2 cards, you may draw cards by clicking "Draw Cards". Each pile shows the top card in that pile. To see all the cards that have been played, click "See all piles".</p>
+      <p>The deck has 99 cards, one for each number between 2 and 98. You start by drawing 7 cards into your hand. Each turn, you must play at least 2 cards from your hand before drawing back to 7. Select a card from your hand by clicking on it and then click "Add to Pile" to add your card to your chosen pile. After you have played 2 cards, you may draw cards by clicking "Draw Cards". Each pile shows the top card in that pile. To see all the cards that have been played, click "See all piles".</p>
       <h4>The Piles</h4>
       <p>Two piles start from 1 and go up to 99. You may play a card on these piles only if it is larger than the top card of the pile.</p>
-      <p>Two piles start from 100 and go down to 2. You may play a card on these piles only if is smaller than the top card of the pile</p>
+      <p>Two piles start from 100 and go down to 2. You may play a card on these piles only if is smaller than the top card of the pile.</p>
       <h4>Jumping</h4>
       <p>In addition to the rules above, you may also play a "jump". For the piles going down, you may play a card EXACTLY 10 more than the top card. For the pile going up, you may play a card EXACTLY 10 less than the top card. For example, on a piles that is going down with a top card of 55, you may play 65. The game continues as normal, playing cards lower than 65.</p>
       <h4>End of Game</h4>
